# Finsight-AI

./: .gitignore  CLAUDE.md  README.md  vercel.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/: ChatArea.jsx  ChatMessage.jsx  Dashboard.jsx  DashboardSkeleton.jsx  LandingPage.jsx  Logo.jsx  Sidebar.jsx  ThemeToggle.jsx  Toast.jsx  dashboardUtils.js
client/src/context/: ThemeContext.jsx
client/src/styles/: themes.css
docs/plans/: 2025-12-14-tavily-query-router.md
server/: pyproject.toml  test_rerank_manual.py
server/app/: main.py
server/app/agents/: reflection.py  research.py  risk.py  state.py  supervisor.py  synthesis.py  verification.py
server/app/api/: chat.py  chat_history.py  documents.py  queries.py  users.py  webhooks.py
server/app/core/: auth.py  config.py
server/app/models/: user.py
server/app/services/: chat_session.py  document_processor.py  hybrid_search.py  llm_service.py  query_preprocessor.py  query_rewriter.py  query_router.py  redis_cache.py  reranker.py  supabase_client.py  tavily_search.py  user_service.py  vector_search.py
server/migrations/: 002_chat_sessions.sql
